--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -7,7 +7,7 @@ html {
 }
 
 .name {
-  font-family: "Inter", sans-serif;
+  font-family: "Ephesis", cursive;
   font-size: 4em;
   font-optical-sizing: auto;
   font-weight: 600;
@@ -310,7 +310,6 @@ html {
 }
 
 .nav {
-  overflow: hidden;
   background-color: #ffffff;
   display: flex;
   flex-direction: row;
@@ -564,6 +563,9 @@ html {
 }
 
 @media screen and (max-width: 1000px) {
+  /* #home{
+    display: none;
+  } */
   .nav.responsive {
     position: relative;
     display: flex;
@@ -583,5 +585,7 @@ html {
     float: none;
     display: block;
     text-align: left;
+    margin: 0;
+    padding: 0.6em;
   }
 }
