--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -32,6 +32,12 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer" />
       <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Homemade+Apple&family=Vujahday+Script&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Ephesis&family=Homemade+Apple&family=Vujahday+Script&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="outer_nav1">
