--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -57,7 +57,7 @@
         <div class="nav" id="navid">
           <a href="/" id="home">Home</a>
           <a href="/about" id="aboutnava">About</a>
-          <a href="/resume.pdf" >Resume</a>
+          <a href="/chandrakantha'sResume.pdf" >Resume</a>
           <a href="/contact"  id="contact">Contact</a>
           
           <a href="javascript:void(0);" class="icon" onclick="myFunction()">
