--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -38,7 +38,15 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Ephesis&family=Homemade+Apple&family=Vujahday+Script&display=swap" rel="stylesheet">
-  </head>
+<script src="https://kit.fontawesome.com/d36cd176ea.js" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+<style>
+        .dark{
+            background-color: #222;
+            color: #e6e6e6;
+        }
+    </style>  
+</head>
   <body>
     <div class="outer_nav1">
       <div class="outer_nav">
@@ -57,8 +65,11 @@
         <div class="nav" id="navid">
           <a href="/" id="home">Home</a>
           <a href="/about" id="aboutnava">About</a>
-          <a href="/chandrakantha'sResume.pdf" >Resume</a>
+          <a href="/ChandrakanthaHP_Resume.pdf" >Resume</a>
           <a href="/contact"  id="contact">Contact</a>
+          <button class="darkmode" onclick="darkfunction()"><i id="Light_dark_mode_id" class="fa-solid fa-cloud-moon" style="color: #5837D0;"></i></button>
+          <!-- <a href="" onclick="darkfunction()">Switch mode</a> -->
+           
           
           <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="fa fa-bars"></i>
@@ -66,5 +77,5 @@
         </div>
       </div>
     </div>
-  </body>
-</html>
+  <!-- </body>
+</html> -->
