--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -4,7 +4,7 @@
     <div class="outer_contact1">
         <div class="contact1 floating imagecontact">
             <center><h1 style="color: #5837D0;margin: 0;font-optical-sizing: auto;font-family: Inter;font-weight:400;display: inline;margin: 0;font-size:2.2em;" data-aos="fade-right" data-aos-duration="1500">Get in touch</h1></center>
-            <img data-aos="fade-right" data-aos-duration="2000" id="imagecontact" class="imagecontact"  src="contact.jpg" alt="">
+            <img data-aos="fade-right" data-aos-duration="2000" id="imagecontact" class="imagecontact"  src="imagecontact.png" alt="">
 
         </div>
         <div class="contact2" style="border-left:solid #5837D0 2px;background-color: #795eda44;border-radius: 0.7em;"data-aos="zoom-in"data-aos-duration="2000">
