changed some files (minor changes)

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,13 +1,13 @@
 <%- include('partials/header') %>
-<div class="outer_main1">
-<div class="outer_main2">
+<div class="outer_main_container1">
+<div class="outer_main_container2">
 <div class="text_cont">
 <h1 style="color: #5837D0;margin: 0;" class="name">I'm Chandrakantha</h1><br>
 <div class="intro" style="display: flex;"><h1 style="color: #5837D0;margin: 0;font-optical-sizing: auto;font-family: Inter;font-weight: 470;display: inline;padding-right: 0.7em;">A </h1><h1 id="demo" style="color: #5837D0;margin: 0;font-optical-sizing: auto;font-family: Inter;font-weight: 470;display: inline;"> </h1></div><br><br>
 <h2 class="intro" style="color: #5837D0;margin: 0;font-optical-sizing: auto;font-family: Inter;font-weight: 500;text-align: justify;">Hi there! I'm a web developer passionate about crafting user-friendly websites. I'm committed to continuous learning and growth in this ever-evolving field.</h2>
 </div>
 <div class="image floating">
-<img id="myimage" style="border-left:2.7px solid #5837D0;border-bottom-right-radius: 2em; filter: drop-shadow(0 0.4rem 0.2rem rgba(24, 57, 204, 0.647));background-image: url('pngimage.png');background-repeat: no-repeat;background-size: cover;background-position: center;" src="eimage.png" alt="">
+<img id="myimage" style="border-left:2.7px solid #5837D0;border-bottom-right-radius: 2em; filter: drop-shadow(0 0.4rem 0.2rem rgba(24, 57, 204, 0.647));background-image: url('pngimage.png');background-repeat: no-repeat;background-size: cover;background-position: center;" src="myimage.png" alt="">
 </div>
 </div>
 </div><br>
