--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -80,12 +80,12 @@ html {
   justify-content: center;
 }
 
-.outer_main1 {
+.outer_main_container1 {
   display: flex;
   justify-content: center;
 }
 
-.outer_main2 {
+.outer_main_container2 {
   display: flex;
   justify-content: space-between;
   margin-top: 1.5em;
@@ -478,7 +478,7 @@ html {
     line-height: 1em;
   }
 
-  .outer_main2 {
+  .outer_main_container2 {
     display: flex;
     flex-direction: column;
     justify-content: center;
